Fixed margin overflow-x on desktop

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ html{
 
 body{
     margin: 0 auto;
+    overflow-x: hidden;
 }
 
 main{
